cmake_minimum_required(VERSION 2.6)

project(p1)

add_executable(public_1000000 tests/public_1000000.cpp)
add_executable(public_iter0 tests/public_iter0.cpp)
add_executable(public_iter1 tests/public_iter1.cpp)
add_executable(public_test0 tests/public_test0.cpp)
add_executable(public_test1 tests/public_test1.cpp)
add_executable(publicbonus_circle tests/publicbonus_circle.cpp)
add_executable(publicbonus_rectangle tests/publicbonus_rectangle.cpp)